2001-09-17  Paul Eggert  <eggert@twinsun.com>

	* lib/autoconf/c.m4: (AC_LANG_INT_SAVE(C)):
	Allow expression to return any value that can fit into unsigned long
	(not int, as before).  Check for output errors.

2001-09-17  Bruno Haible <haible@ilog.fr>

	* lib/autoconf/c.m4: (AC_LANG_INT_SAVE(C)):
	Always include <stdio.h> and <stdlib.h>. Evaluate
	the expression in an extra function before these includes. Call
	fprintf "%d" only after ensuring the argument is of type 'int'.
	Reported by Wayne Chapeskie <waynec@spinnaker.com>.

2001-09-17  Paul Eggert  <eggert@twinsun.com>

	Fix bug reported by Paul Townsend on AIX 4.3.3.0 with CFLAGS=-O4
	or CFLAGS=-O5.  In that case, the linker has a relaxed view of
	fatal errors, and AC_CHECK_LIB causes it to include libraries even
	when they don't exist.

	* lib/autoconf/headers.m4 (AC_HEADER_DIRENT): Use AC_SEARCH_LIBS,
	not AC_CHECK_LIB, so that we don't use -ldir or -lx if we don't
	need it.

	* lib/autoconf/specific.m4 (AC_ISC_POSIX): Replace the old, crufty
	version with the version used by fileutils 4.1, except use
	AC_SEARCH_LIBS, not AC_CHECK_LIB, so that we don't use -lcposix if
	we don't need it.

	* doc/autoconf.texi (AC_ISC_POSIX): Describe new behavior.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* tests/base.at, tests/m4sh.at: Be sure to issue the bangshe line
	_first_.
	Reported by Gerrit P. Haase.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT): Reset `AT_victims' so that
	m4_defn'ing is valid.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (m4_append_uniq): New.
	* lib/autotest/general.m4 (AT_VICTIMS, AT_KEYWORDS, _AT_CLEANUP_FILE):
	Use it.

2001-09-13  Akim Demaille  <akim@epita.fr>

	* lib/m4sugar/m4sugar.m4 (_AS_QUOTE_IFELSE, _AS_BOX_INDIR): Use
	m4_match.
	(m4_re_escape): New.
	* lib/autoconf/status.m4 (AC_CONFIG_IF_MEMBER): Use it.
	* lib/autoconf/general.m4 (AC_CACHE_SAVE): Use m4_match.