@@ -1,3 +1,12 @@
+2001-09-18  Akim Demaille  <akim@epita.fr>
+
+	* lib/autom4te.in (Autoconf): Preselect AM_CONDITIONAL,
+	AC_LIBSOURCE, AC_CONFIG_FILES.
+	* lib/autotest/general.m4 (AT_INIT): Don't abort when a tested
+	program version string doesn't match the package's.
+	* lib/autoconf/general.m4 (AC_CACHE_VAL): Reestablish the space
+	after `(cached)'.
+
 2001-09-17  Paul Eggert  <eggert@twinsun.com>
 
 	* lib/autoconf/c.m4: (AC_LANG_INT_SAVE(C)):
